# github-actions-demo

./: .gitignore  .gitmodules  .project  CMakeLists.txt  Steps.txt
mcu_test_proj/: .cproject  .mxproject  .project  CMakeLists.txt  CMakePresets.json  MX_Project.ioc  build.ioc  start_bxarm_compile.sh  start_gcc_compile.sh
mcu_test_proj/Core/Inc/: hal.h
mcu_test_proj/Core/Src/: hal.c  main.c
mcu_test_proj/Debug/: makefile  objects.list  sources.mk
mcu_test_proj/Debug/Core/Src/: subdir.mk
mcu_test_proj/Debug/Core/Startup/: subdir.mk
mcu_test_proj/Debug/Drivers/STM32L1xx_HAL_Driver/Src/: subdir.mk
mcu_test_proj/cmake/: bxarm.cmake  gcc-arm-none-eabi.cmake
mcu_test_proj/cmake/bxarm/: stm32l152xe_sram.icf
mcu_test_proj/cmake/gcc-arm-none-eabi/: STM32L152RETx_FLASH.ld
mcu_test_proj/cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
mcu_test_proj/tools/gcc/arm-none-eabi/include/: _newlib_version.h  _syslist.h  complex.h  ctype.h  dirent.h  locale.h  math.h  ndbm.h  newlib.h  pwd.h  reent.h  spawn.h  stdio.h  string.h  wchar.h
mcu_test_proj/tools/gcc/arm-none-eabi/include/c++/12.3.1/: algorithm  any  array  atomic  barrier  bit  bitset  cassert  ccomplex  cctype  cerrno  cfenv  cfloat  charconv  chrono  cinttypes  ciso646  climits  clocale  cmath  codecvt  compare  complex  complex.h  concepts  condition_variable  coroutine  csetjmp  csignal  cstdalign  cstdarg  cstdbool  cstddef  cstdint  cstdio  cstdlib  cstring  ctgmath  ctime  cuchar  (+71 more)
mcu_test_proj/tools/gcc/arm-none-eabi/include/c++/12.3.1/backward/: auto_ptr.h  backward_warning.h  binders.h  hash_fun.h  hashtable.h  strstream
mcu_test_proj/tools/gcc/arm-none-eabi/include/c++/12.3.1/bits/: algorithmfwd.h  align.h  alloc_traits.h  allocated_ptr.h  allocator.h  atomic_base.h  atomic_futex.h  atomic_lockfree_defines.h  atomic_timed_wait.h  atomic_wait.h  basic_ios.h  basic_ios.tcc  basic_string.h  basic_string.tcc  boost_concept_check.h  c++0x_warning.h  char_traits.h  charconv.h  chrono.h  codecvt.h  concept_check.h  cow_string.h  cpp_type_traits.h  cxxabi_forced.h  cxxabi_init_exception.h  deque.tcc  enable_special_members.h  erase_if.h  exception.h  exception_defines.h  exception_ptr.h  forward_list.h  forward_list.tcc  fs_dir.h  fs_fwd.h  fs_ops.h  fs_path.h  fstream.tcc  functexcept.h  functional_hash.h  (+112 more)
mcu_test_proj/tools/gcc/arm-none-eabi/include/c++/12.3.1/debug/: assertions.h  bitset  debug.h  deque  formatter.h  forward_list  functions.h  helper_functions.h  list  macros.h  map  map.h  multimap.h  multiset.h  safe_base.h  safe_container.h  safe_iterator.h  safe_iterator.tcc  safe_local_iterator.h  safe_local_iterator.tcc  safe_sequence.h  safe_sequence.tcc  safe_unordered_base.h  safe_unordered_container.h  safe_unordered_container.tcc  set  set.h  stl_iterator.h  string  unordered_map  unordered_set  vector
mcu_test_proj/tools/gcc/arm-none-eabi/include/c++/12.3.1/decimal/: decimal  decimal.h
mcu_test_proj/tools/gcc/arm-none-eabi/include/c++/12.3.1/experimental/: algorithm  any  array  buffer  chrono  deque  executor  forward_list  functional  internet  io_context  iterator  list  map  memory  memory_resource  net  netfwd  numeric  optional  propagate_const  random  ratio  regex  set  simd  socket  source_location  string  string_view  system_error  timer  tuple  type_traits  unordered_map  unordered_set  utility  vector
mcu_test_proj/tools/gcc/arm-none-eabi/include/c++/12.3.1/ext/: algorithm  aligned_buffer.h  alloc_traits.h  atomicity.h  bitmap_allocator.h  cast.h  cmath  codecvt_specializations.h  concurrence.h  debug_allocator.h  enc_filebuf.h  extptr_allocator.h  functional  hash_map  hash_set  iterator  malloc_allocator.h  memory  mt_allocator.h  new_allocator.h  numeric  numeric_traits.h  pod_char_traits.h  pointer.h  pool_allocator.h  random  random.tcc  rb_tree  rc_string_base.h  rope  ropeimpl.h  slist  sso_string_base.h  stdio_filebuf.h  stdio_sync_filebuf.h  string_conversions.h  throw_allocator.h  type_traits.h  typelist.h  vstring.h  (+3 more)
mcu_test_proj/tools/gcc/arm-none-eabi/include/c++/12.3.1/parallel/: algo.h  algobase.h  base.h  (+40 more)
mcu_test_proj/tools/gcc/arm-none-eabi/include/machine/: ieee.h  ieeefp.h  setjmp.h
mcu_test_proj/tools/gcc/arm-none-eabi/include/newlib-nano/: newlib.h
mcu_test_proj/tools/gcc/arm-none-eabi/include/sys/: _default_fcntl.h  _types.h  cdefs.h  config.h  endian.h  errno.h  features.h  fenv.h  reent.h  resource.h  select.h  signal.h  stat.h  time.h  times.h  tree.h  types.h  unistd.h  wait.h
mcu_test_proj/tools/gcc/arm-none-eabi/lib/: libstdc++.a-gdb.py
mcu_test_proj/tools/gcc/arm-none-eabi/lib/ldscripts/: armelf.x  armelf.xbn  armelf.xc  armelf.xce  armelf.xd  armelf.xdc  armelf.xdce  armelf.xde  armelf.xdw  armelf.xdwe  armelf.xe  armelf.xn  armelf.xr  armelf.xs  armelf.xsc  armelf.xsce  armelf.xse  armelf.xsw  armelf.xswe  armelf.xu  armelf.xw  armelf.xwe
mcu_test_proj/tools/gcc/arm-none-eabi/lib/thumb/nofp/: libstdc++.a-gdb.py  nano_c_standard_cpp.specs
mcu_test_proj/tools/gcc/arm-none-eabi/share/gdb/syscalls/: aarch64-linux.xml  amd64-linux.xml  arm-linux.xml  freebsd.xml  gdb-syscalls.dtd  i386-linux.xml  mips-n32-linux.xml  mips-n64-linux.xml  mips-o32-linux.xml  netbsd.xml  ppc-linux.xml  ppc64-linux.xml  s390-linux.xml  s390x-linux.xml  sparc-linux.xml  sparc64-linux.xml
mcu_test_proj/tools/gcc/arm-none-eabi/share/gdb/system-gdbinit/: elinos.py  wrs-linux.py
mcu_test_proj/tools/gcc/include/gdb/: jit-reader.h
mcu_test_proj/tools/gcc/share/doc/gcc-arm-none-eabi/: license.txt
mcu_test_proj/tools/gcc/share/doc/gcc-arm-none-eabi/html/: as.html  bfd.html  binutils.html  ctf-spec.html  gprof.html  ld.html  libiberty.html  sframe-spec.html
mcu_test_proj/tools/gcc/share/doc/gcc-arm-none-eabi/info/: annotate.info  as.info  binutils.info  gccint.info  gprof.info  ld.info  porting.info
mcu_test_proj/tools/gcc/share/gcc-arm-none-eabi/libstdcxx/v6/: __init__.py  printers.py  xmethods.py
tests/: CMakeLists.txt  test_main.cpp
tests/src/: test_toggle.cpp
tests/src/helper/: CMakeLists.txt  hal_gpio_togglepin.cpp  hal_gpio_togglepin.hpp
(+4299 files in other folders)
